--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <title>React.js Boilerplate</title>
 </head>
 
